# Tachyon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Tachyon.kdev4
cmake/: file2c.cmake
sources/: CMakeLists.txt  PPMImage.cpp  PPMImage.h  Tachyon.h  main.cpp
sources/Core/: AABB.cpp  AABB.h  BLAS.cpp  BLAS.h  BVHLinearTree.hpp  Camera.cpp  Camera.h  Collection.hpp  Geometry.cpp  Geometry.h  GeometryCollection.cpp  GeometryCollection.h  HDR.cpp  HDR.h  Linearizable.h  Ray.cpp  Ray.h  RayGeometryIntersection.cpp  RayGeometryIntersection.h  RayInterceptable.h  RenderContext.cpp  RenderContext.h  Scene.cpp  Scene.h  TLAS.cpp  TLAS.h  Triangle.cpp  Triangle.h
sources/Core/Lighting/: Light.cpp  Light.h  LightCollection.h  PointLight.cpp  PointLight.h
sources/Memory/: Allocator.cpp  Allocator.hpp  MemoryPool.h  PoolManager.cpp  PoolManager.h  UnsafeAllocator.hpp  UnsafePoolManager.cpp  UnsafePoolManager.h
sources/Rendering/: ComputeRenderer.cpp  ComputeRenderer.h  ContextSerialization.h  CoreTypes.h  ExposureToneMapper.cpp  ExposureToneMapper.h  GeometryPrimitive.cpp  GeometryPrimitive.h  ReinhardToneMapping.cpp  ReinhardToneMapping.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  RenderingPipeline.cpp  RenderingPipeline.h  ToneMapper.h
sources/Rendering/CPU/: CPURenderer.cpp  CPURenderer.h  ExposureToneMapper.cpp  ExposureToneMapper.h  RenderSurface.cpp  RenderSurface.h
sources/Rendering/CPU/Shading/: DistanceShader.cpp  DistanceShader.h  Shader.h
sources/Rendering/CPU/ToneMapping/: ExposureToneMapper.cpp  ExposureToneMapper.h  ReinhardToneMapping.cpp  ReinhardToneMapping.h  ToneMapper.h
sources/Rendering/OpenGL/: OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderer.cpp  OpenGLRenderer.h
sources/Rendering/OpenGL/Pipeline/: ComputeShader.cpp  ComputeShader.h  FragmentShader.cpp  FragmentShader.h  Program.cpp  Program.h  Shader.cpp  Shader.h  VertexShader.cpp  VertexShader.h
sources/Rendering/Shading/: DistanceShader.cpp  DistanceShader.h  Shader.h
sources/Rendering/ToneMapping/: ExposureToneMapper.cpp  ExposureToneMapper.h  ReinhardToneMapping.cpp  ReinhardToneMapping.h  ToneMapper.h
sources/Rendering/Vulkan/: VukanPipeline.cpp  VulkanPipeline.h
sources/Rendering/Vulkan/Framework/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.h  ComputeShader.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  DeviceMemoryBuffer.cpp  DeviceMemoryBuffer.h  DeviceOwned.cpp  DeviceOwned.h  Fence.cpp  Fence.h  Image.cpp  Image.h  ImageInterface.cpp  ImageInterface.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  InstanceOwned.cpp  InstanceOwned.h  MemoryPool.cpp  MemoryPool.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  QueueFamily.cpp  QueueFamily.h  Shader.cpp  Shader.h  (+8 more)
sources/Rendering/Vulkan/Framework/Shaders/: Shader.cpp  Shader.h
sources/Rendering/Vulkan/Utils/: Device.cpp  Device.h  Instance.cpp  Instance.h  InstanceObject.cpp  InstanceObject.h  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h  VulkanManaged.h
sources/shaders/: aabb.glsl  bvh.glsl  camera.glsl  config.glsl  core.glsl  geometry.glsl  intersection.glsl  ray.glsl  raytrace.comp  utils.glsl
sources/shaders/OpenGL/: raytrace.comp  raytrace.glsl  raytrace_ex.comp  raytracing_algorithms.comp  tlasBufferizer.comp  tonemapping.frag  tonemapping.vert
sources/shaders/opengl/: flush.comp  insert.comp  render.comp  tonemapping.frag  update.comp
sources/shaders/programs/: flush.comp  insert.comp  render.comp  tonemapping.frag  tonemapping.vert  update.comp
sources/shaders/vulkan/: insert.comp  nuke.comp  render.comp  tonemapping.frag
